[gio] search for other cluster members

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,3 +22,7 @@ suites:
     verifier:
       inspec_tests:
         - test/integration/default
+    attributes:
+      consul-cookbook:
+        role: consul-cookbook
+        hosts: ['default-ubuntu-1604.vagrantup.com']
