[gio] install consul using official binary package

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,3 +26,4 @@ suites:
       consul-cookbook:
         role: consul-cookbook
         hosts: ['default-ubuntu-1604.vagrantup.com']
+        package_retries: 1
