[gio/puja] use ubuntu image instead and install packer manually

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,13 @@ version: 2
 jobs:
   validate:
     docker:
-      - image: hashicorp/packer:1.3.5
+      - image: ubuntu:18.04
     working_directory: ~/packer
     steps:
       - checkout
+      - run:
+          name: Install packer
+          command: ./scripts/circleci-install-packer.sh
       - run:
           name: Validate base
           command: packer validate ./packer.json
