--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,25 @@ jobs:
       - run:
           name: Validate base
           command: ./packer/packer validate ./packer.json
+  build-base:
+    docker:
+      - image: ubuntu:18.04
+    working_directory: ~/packer
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/packer
+      - run:
+          name: Install packer
+          command: ./scripts/circleci-install-packer.sh
+      - run:
+          name: Install LXD
+          command: ./scripts/circleci-install-lxd.sh
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - validate
+      - build-base:
+          requires:
+            - validate
