--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,10 @@ jobs:
       - run:
           name: Install LXD
           command: ./scripts/circleci-install-lxd.sh
+      - run:
+          name: Build base
+          command: ./scripts/circleci-build-base.sh
+          no_output_timeout: 30m
 workflows:
   version: 2
   build-and-deploy:
