[gio/puja] add step to build the base

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,13 @@ validate:
     - ./packer/packer validate ./packer.json
   tags:
     - bionic
+
+build-base:
+  stage: build-base
+  script:
+    - ./scripts/gitlabci-install-lxd.sh
+    - ./scripts/gitlabci-build-base.sh
+  tags:
+    - bionic
     - lxd
     - lxc
