--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ stages:
   - validate
   - build-base
 
+variables:
+  COOKBOOK_PATHS: "/home/gitlab-runner/chef-repo/cookbooks"
+
 before_script:
     - ./scripts/gitlabci-install-packer.sh
 
@@ -15,7 +18,7 @@ validate:
 build-base:
   stage: build-base
   script:
-    - BUILD_VERSION=0.0.1 BUILD_COMMIT_SHA=$CI_COMMIT_SHA COOKBOOKS_PATH=/home/gitlab-runner/chef-repo/cookbooks ./scripts/gitlabci-build-base.sh
+    - BUILD_VERSION=0.0.1 BUILD_COMMIT_SHA=$CI_COMMIT_SHA ./scripts/gitlabci-build-base.sh
   tags:
     - bionic
     - lxd
