--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   BUILD_COMMIT_SHA: "$CI_COMMIT_SHA"
   OUTPUT_IMAGE: "lxd-consul-$CI_COMMIT_TAG"
   IMAGE_REGISTRY: "barito-registry"
-  COOKBOOK_PATHS: "/home/gitlab-runner/chef-repo/cookbooks"
+  COOKBOOK_PATHS: "./cookbooks"
 
 before_script:
     - ./scripts/gitlabci-install-packer.sh
