--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,25 @@ stages:
 variables:
   BUILD_VERSION: "$CI_COMMIT_TAG"
   BUILD_COMMIT_SHA: "$CI_COMMIT_SHA"
-  OUTPUT_IMAGE: "lxd-consul-$CI_COMMIT_TAG"
   IMAGE_REGISTRY: "barito-registry"
   COOKBOOK_PATHS: "./cookbooks"
 
 before_script:
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-install-packer.sh | bash
 
-validate:
+validate-ubuntu-image:
   stage: validate
+  variables:
+    OUTPUT_IMAGE: "lxd-ubuntu-consul-$CI_COMMIT_TAG"
   script:
-    - ./packer/packer validate ./packer.json
+    - ./packer/packer validate ./packer_ubuntu.json
   tags:
     - bionic
 
-build-base:
+build-base-ubuntu-image:
   stage: build-base
+  variables:
+    OUTPUT_IMAGE: "lxd-ubuntu-consul-$CI_COMMIT_TAG"
   script:
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-build-base.sh | bash
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-copy-image.sh | bash
@@ -30,3 +33,4 @@ build-base:
     - lxc
   only:
   - tags
+
