--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ validate-ubuntu-image:
   stage: validate
   variables:
     OUTPUT_IMAGE: "lxd-ubuntu-consul-$CI_COMMIT_TAG"
+    TEMPLATE_FILE: "./packer_ubuntu.json"
   script:
     - ./packer/packer validate ./packer_ubuntu.json
   tags:
