--- a/cookbooks/consul/.gitlab-ci.yml
+++ b/cookbooks/consul/.gitlab-ci.yml
@@ -14,7 +14,7 @@ before_script:
 validate-ubuntu-image:
   stage: validate
   variables:
-    OUTPUT_IMAGE: "lxd-ubuntu-consul-$CI_COMMIT_TAG"
+    OUTPUT_IMAGE: "lxd-ubuntu-minimal-consul-$CI_COMMIT_TAG"
   script:
     - ./packer/packer validate ./packer_ubuntu.json
   tags:
@@ -23,7 +23,7 @@ validate-ubuntu-image:
 build-base-ubuntu-image:
   stage: build-base
   variables:
-    OUTPUT_IMAGE: "lxd-ubuntu-consul-$CI_COMMIT_TAG"
+    OUTPUT_IMAGE: "lxd-ubuntu-minimal-consul-$CI_COMMIT_TAG"
     TEMPLATE_FILE: "./packer_ubuntu.json"
   script:
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-build-base.sh | bash
