--- a/cookbooks/consul/.gitlab-ci.yml
+++ b/cookbooks/consul/.gitlab-ci.yml
@@ -3,28 +3,26 @@ stages:
   - build-base
 
 variables:
-  BUILD_VERSION: "$CI_COMMIT_TAG"
   BUILD_COMMIT_SHA: "$CI_COMMIT_SHA"
-  IMAGE_REGISTRY: "barito-registry"
+  BUILD_VERSION: "$CI_COMMIT_TAG"
+  BUILDERS_IMAGE: "ubuntu-minimal:18.04"
   COOKBOOK_PATHS: "./cookbooks"
+  IMAGE_REGISTRY: "barito-registry"
+  OUTPUT_IMAGE: "lxd-ubuntu-minimal-consul-$CI_COMMIT_TAG"
+  TEMPLATE_FILE: "./packer.json"
 
 before_script:
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-install-packer.sh | bash
 
-validate-ubuntu-image:
+validate-image:
   stage: validate
-  variables:
-    OUTPUT_IMAGE: "lxd-ubuntu-minimal-consul-$CI_COMMIT_TAG"
   script:
-    - ./packer/packer validate ./packer_ubuntu.json
+    - ./packer/packer validate $TEMPLATE_FILE
   tags:
     - bionic
 
-build-base-ubuntu-image:
+build-base-image:
   stage: build-base
-  variables:
-    OUTPUT_IMAGE: "lxd-ubuntu-minimal-consul-$CI_COMMIT_TAG"
-    TEMPLATE_FILE: "./packer_ubuntu.json"
   script:
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-build-base.sh | bash
     - curl -s https://raw.githubusercontent.com/BaritoLog/cx-scripts/master/gitlabci-copy-image.sh | bash
